Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,45 +1,52 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>xcitestudios.GitHub.io by xcitestudios</title>
+    <meta name="description" content="xcitestudios.GitHub.io : com.xcitestudios.*">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <title>xcitestudios.GitHub.io</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>xcitestudios.GitHub.io</h1>
-        <p>com.xcitestudios.*</p>
-        <p class="view"><a href="https://github.com/xcitestudios">View the Project on GitHub <small>xcitestudios</small></a></p>
-        <ul>
-          <li class="single"><a href="https://github.com/xcitestudios/xcitestudios.github.io">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/xcitestudios">View on GitHub</a>
+
+          <h1 id="project_title">xcitestudios.GitHub.io</h1>
+          <h2 id="project_tagline">com.xcitestudios.*</h2>
+
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h2>
 <a id="php" class="anchor" href="#php" aria-hidden="true"><span class="octicon octicon-link"></span></a>PHP</h2>
 
 <ul>
-<li><a href="com.xcitestudios.Generic%20Documentation">/php-generic</a></li>
-<li><a href="com.xcitestudios.Logging%20Documentation">/php-logging</a></li>
-<li><a href="com.xcitestudios.Network%20Documentation">/php-network</a></li>
-<li><a href="com.xcitestudios.Parallelisation%20Documentation">/php-Parallelisation</a></li>
+<li><a href="/php-generic">com.xcitestudios.Generic Documentation</a></li>
+<li><a href="/php-logging">com.xcitestudios.Logging Documentation</a></li>
+<li><a href="/php-network">com.xcitestudios.Network Documentation</a></li>
+<li><a href="/php-Parallelisation">com.xcitestudios.Parallelisation Documentation</a></li>
 </ul>
       </section>
     </div>
-    <footer>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
