--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <li><a href="/php-generic">com.xcitestudios.Generic Documentation</a></li>
 <li><a href="/php-logging">com.xcitestudios.Logging Documentation</a></li>
 <li><a href="/php-network">com.xcitestudios.Network Documentation</a></li>
-<li><a href="/php-Parallelisation">com.xcitestudios.Parallelisation Documentation</a></li>
+<li><a href="/php-parallelisation">com.xcitestudios.Parallelisation Documentation</a></li>
 </ul>
       </section>
     </div>
